# pwa

./: .gitignore  LICENSE  clean  publish-all
.github/workflows/: publish.yaml
cribbage/: .gitignore  CLAUDE.md  index.css  index.html  index.js  manifest.webmanifest  publish  service-worker.js
cribbage/.claude/: claude.md  plan.md
cribbage/board/: index.css  index.html  index.js
hash-files/: Cargo.toml
hash-files/src/: main.rs
wordle/: .gitignore  Cargo.toml  Dockerfile  Dockerfile-MUSL  compose.yml  do  stub-main.rs
wordle/bin-wordle/: Cargo.toml  assess_3158  run  search
wordle/bin-wordle-http/: Cargo.toml  index.html
wordle/bin-wordle-http/src/: main.rs
wordle/bin-wordle-wasm/: Cargo.toml  build  deploy  publish  service-worker.js
wordle/bin-wordle-wasm/src/: lib.rs
wordle/bin-wordle-wasm/web/: app.webmanifest  index.html  service-worker.js
wordle/bin-wordle/src/: main.rs
wordle/clone/: LICENSE  index.html  script.js  styles.css
wordle/custom/: index.html  index.js  style.css
wordle/data/: 2309-all-top  v10_games.txt  v11.txt  v12_games.txt  v13.txt  v13_eval.txt  v13_human.txt  v8.txt  v8_games.txt
wordle/data/3158/: README.txt
wordle/diy/: app.webmanifest  build  index.html  publish  script.js  service-worker.js  styles.css
wordle/diy/pwa/: app.webmanifest
wordle/lib-wordle/: Cargo.toml
wordle/lib-wordle/src/: analyze.rs  bit_vector_slice.rs  check.rs  clubs.rs  cluster_vector.rs  letter_orders.rs  lib.rs  parser.rs  rank.rs  response.rs  scrappy.rs  search.rs  single_use.rs  state.rs  word.rs  wordle_tree.rs
wordle/lib-wordle/src/wordle_tree/: builders.rs  tree_player.rs
wordle/lib-wordle/tst/_o_er/: answers.txt  guesses.txt
wordle/other/templates/: README.md
wordle/v1/: publish
